publish: Add improved README
generated from commit 39a03c28afb9ea3666b645edf597a12cc1ab9092

--- a/index-aqueduct.html
+++ b/index-aqueduct.html
@@ -3080,6 +3080,20 @@ Remember — the response is jsonapi format
 -H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span> <span class="se">\</span>
 -H <span class="s2">"Content-Type: application/json"</span>  -d <span class="se">\</span>
  <span class="s1">'{
+    "application":[
+       "your", "apps"
+    ],
+    "name":"Example layer",
+    "status": 1
+}'</span>
+</code></pre>
+<blockquote>
+<p>The following structure was previously supported but should now be considered deprecated:</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X POST https://api.resourcewatch.org/v1/dataset/&lt;dataset_id&gt;/layer <span class="se">\</span>
+-H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span> <span class="se">\</span>
+-H <span class="s2">"Content-Type: application/json"</span>  -d <span class="se">\</span>
+ <span class="s1">'{
    "layer": {
       "application":[
          "your", "apps"
