publish: Document widget cloning
generated from commit 9c4210644e23e469dc3776ce731bce66d1dc0e95

--- a/index-rw.html
+++ b/index-rw.html
@@ -2647,6 +2647,29 @@ Remember — the response is jsonapi format
    }
 }'</span>
 </code></pre>
+<h2 id="clone-a-widget">Clone a Widget</h2>
+
+<p>You can clone an existing widget as long as you have permissions to the applications associated with it. Basic usage requires no body params, but you can optionally pass a new <code class="prettyprint">name</code> or <code class="prettyprint">description</code> to be used in the creation of the new widget.</p>
+
+<blockquote>
+<p>To clone a widget, you have to do a POST request with the following body:</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X PATCH https://api.resourcewatch.org/v1/dataset/&lt;dataset_id&gt;/widget/&lt;widget_id&gt;/clone <span class="se">\</span>
+-H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span> <span class="se">\</span>
+-H <span class="s2">"Content-Type: application/json"</span>
+</code></pre>
+<blockquote>
+<p>You can optionally set a new name or description:</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X PATCH https://api.resourcewatch.org/v1/dataset/&lt;dataset_id&gt;/widget/&lt;widget_id&gt;/clone <span class="se">\</span>
+-H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span> <span class="se">\</span>
+-H <span class="s2">"Content-Type: application/json"</span>  -d <span class="se">\</span>
+ <span class="s1">'{
+   "name": "name for the cloned widget",
+   "description": "
+   "name": "name for the cloned widget", for the cloned widget",
+}'</span>
+</code></pre>
 <h2 id="delete-a-widget">Delete a Widget</h2>
 <pre class="highlight shell"><code>curl -X DELETE https://api.resourcewatch.org/v1/dataset/&lt;dataset_id&gt;/widget/&lt;widget_id&gt; <span class="se">\</span>
 -H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span> <span class="se">\</span>
@@ -3075,6 +3098,20 @@ Remember — the response is jsonapi format
 
 <blockquote>
 <p>To create a layer, you have to do a POST request with the following body:</p>
+</blockquote>
+<pre class="highlight shell"><code>curl -X POST https://api.resourcewatch.org/v1/dataset/&lt;dataset_id&gt;/layer <span class="se">\</span>
+-H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span> <span class="se">\</span>
+-H <span class="s2">"Content-Type: application/json"</span>  -d <span class="se">\</span>
+ <span class="s1">'{
+    "application":[
+       "your", "apps"
+    ],
+    "name":"Example layer",
+    "status": 1
+}'</span>
+</code></pre>
+<blockquote>
+<p>The following structure was previously supported but should now be considered deprecated:</p>
 </blockquote>
 <pre class="highlight shell"><code>curl -X POST https://api.resourcewatch.org/v1/dataset/&lt;dataset_id&gt;/layer <span class="se">\</span>
 -H <span class="s2">"Authorization: Bearer &lt;your-token&gt;"</span> <span class="se">\</span>
@@ -6751,17 +6788,9 @@ curl -X POST http://localhost:9000/auth/login <span class="se">\</span>
 <li>GET &rsquo;<BASE API URL>/auth/sign-up&rsquo; - Account creation page, for accounts using email + password based login</li>
 <li>POST &rsquo;<BASE API URL>/auth/sign-up&rsquo; - Account creation endpoint, for accounts using email + password based login</li>
 </ul>
-<pre class="highlight shell"><code><span class="c"># Account creation using email + password (JSON output)</span>
+<pre class="highlight shell"><code><span class="c"># Account creation using email + password</span>
 curl -X POST http://localhost:9000/auth/sign-up <span class="se">\</span>
 -H <span class="s2">"Content-Type: application/json"</span>  -d <span class="se">\</span>
- <span class="s1">'{
-    "email":"your-email@provider.com",
-    "password":"potato",
-    "repeatPassword":"potato"
-}'</span>
-
-<span class="c"># Account creation using email + password (HTML output)</span>
-curl -X POST http://localhost:9000/auth/sign-up -d <span class="se">\</span>
  <span class="s1">'{
     "email":"your-email@provider.com",
     "password":"potato",
