publish: Add webshot docs
generated from commit 65a7c414b5767a0debe335c8ed2e961d7b350eb6

--- a/index-rw.html
+++ b/index-rw.html
@@ -6752,6 +6752,43 @@ Given the following sets of concepts:</p>
     }
 }
 </code></pre>
+          <h1 id="webshot">Webshot</h1>
+
+<p>The webshot set of endpoints allows you to capture a given page as a document file, that can then be used, for example, as a preview thumbnail.</p>
+
+<aside class="notice">
+This process is computational demanding and may be slow at times, depeding on server load and complexity of the page being rendered. Avoid making consecutive or batch requests to these endpoint, and allow enough time for them to process. 
+</aside>
+
+<p>This service has two endpoints:</p>
+
+<h3 id="pdf">PDF</h3>
+
+<p>This endpoint expects a URL as a query parameter and generates a pdf containing a rendered version of that page: </p>
+<pre class="highlight plaintext"><code>curl -X GET \
+  'http://api.resourcewatch.org/v1/webshot/pdf?url=http://google.com&amp;filename=my-google-screenshoz.pdf' \
+  -H 'Authorization: Bearer &lt;your-token&gt;' \
+  -H 'Content-Type: application/json' \
+</code></pre>
+<h3 id="widget">Widget</h3>
+
+<p>This endpoint generates a thumbnail image for the provided widget and stores it on AWS S3.</p>
+
+<aside class="notice">
+This endpoint does not validate the existence of the widget - you will not get a 404 HTTP error if you provided a non-existent widget id. 
+</aside>
+<pre class="highlight plaintext"><code>curl -X POST \
+  http://localhost:9000/v1/webshot/widget/7b540186-9a9f-4e13-a6e8-f38e64fab2e1/thumbnail \
+  -H 'Authorization: Bearer &lt;your-token&gt;' \
+  -H 'Content-Type: application/json' \
+</code></pre><pre class="highlight json"><code><span class="p">{</span><span class="w">
+    </span><span class="s2">"data"</span><span class="p">:</span><span class="w"> </span><span class="p">{</span><span class="w">
+        </span><span class="s2">"widgetThumbnail"</span><span class="p">:</span><span class="w"> </span><span class="s2">"http://s3.amazonaws.com/resourcewatch/thumbnails/&lt;filename&gt;.png"</span><span class="w">
+    </span><span class="p">}</span><span class="w">
+</span><span class="p">}</span><span class="w">
+</span></code></pre>
+<p>This endpoint accepts two optional query parameters, <code class="prettyprint">height</code> and <code class="prettyprint">width</code>, that configure the size of the generated screenshot. Keep in mind that this endpoint works by rendering the <code class="prettyprint">https://resourcewatch.org/embed/widget/&lt;widget id&gt;</code> URL with those dimensions applied to the viewport, and then captures the content of the <code class="prettyprint">.widget-content</code> DOM element into an image file. As such, the resulting screenshot will have the proportional size of the corresponding DOM element within that viewport, and not the exact <code class="prettyprint">height</code> and <code class="prettyprint">width</code> specified.</p>
+
           <h1 id="user-management">User Management</h1>
 
 <p>The following endpoints expose the API&rsquo;s functionality regarding user management.
