publish: Improve user doc formating
generated from commit 101d101db5088ac4545590adeabff121fe1f6bee

--- a/index.html
+++ b/index.html
@@ -7098,7 +7098,7 @@ curl -X POST http://localhost:9000/auth/reset-password/&lt;email token&gt; <span
     "repeatPassword":"potato"
 }'</span>
 </code></pre>
-<h2 id="user-management">User management</h2>
+<h2 id="user-details-management">User details management</h2>
 
 <h3 id="get-lt-base-api-url-gt-auth-user">GET <code class="prettyprint">&lt;BASE API URL&gt;/auth/user</code></h3>
 <pre class="highlight shell"><code><span class="c"># lists currently active users</span>
