publish: Merge pull request #20 from resource-watch/feature/developer-docs
generated from commit bc466252fb456f3088d2c5365ece2d64984b1a98

--- a/index-aqueduct.html
+++ b/index-aqueduct.html
@@ -2436,7 +2436,7 @@ Remember — the response is jsonapi format
 </tr>
 <tr>
 <td>freeze</td>
-<td style="text-align: center">If the data is freezed</td>
+<td style="text-align: center">If the data is frozen</td>
 <td style="text-align: right">Boolean</td>
 <td style="text-align: right">true - false</td>
 <td style="text-align: right">No</td>
