--- a/index.html
+++ b/index.html
@@ -2436,7 +2436,7 @@ Remember — the response is jsonapi format
 </tr>
 <tr>
 <td>freeze</td>
-<td style="text-align: center">If the data is freezed</td>
+<td style="text-align: center">If the data is frozen</td>
 <td style="text-align: right">Boolean</td>
 <td style="text-align: right">true - false</td>
 <td style="text-align: right">No</td>
